--- a/style.css
+++ b/style.css
@@ -1,91 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
-    height: 100vh;
-    max-width: 850px;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    max-width: 1200px;
     margin: auto;
-    background-color: black;
+    height: 1500px;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: white;
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    display: block;
+    color: gray;
+    text-align: center;
+    padding: 14px 26px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: #001423;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+    background-color: #001423;
     color: white;
-    font-family: Roboto, sans-serif;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
+}
+
+/* PAGE CONTENT STARTS HERE */
+.page-container {
     display: flex;
     flex-direction: column;
-
 }
 
-.right {
+#hero-section {
     display: flex;
+    flex-direction: column;
+    height: 80vh;
+    align-items: center;
+    gap: 7em;
+    margin-top: 13vh;
+    padding: 0 2em;
+}
+
+
+.hero-logos {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 350px;
+    column-gap: 2em;
     flex-wrap: wrap;
 }
-img {
-    height: 300px;
-    width: 100%;
-    min-width: 20px;
-}
 
-header {
+.portfolio-section {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 15px 25px;
-    border-bottom: 1px solid #ffbe0b;
-}
-
-header a:hover {
-    color: #FB5607;
-}
-
-.logo a:hover {
-    color: #ffbe0b;
-}
-
-.navbar {
-    display: flex;
-    padding: 0;
-    gap: 50px;
-}
-
-.content {
-    display: flex;
-    gap: 30px;
-    align-items: center;
-    padding: 0 0;
-    margin: 0 90px;
-}
-
-.content a {
-    color: #ffbe0b;
-}
-
-.content a:hover {
-    color: #FB5607;
-}
-
-h2 {
-    padding: 0;
-    margin: 0;
+    flex-wrap: wrap;
+    background-color:teal;
 }
 
 
-footer {
-    margin-top: auto;
-    padding: 10px;
-    color: #6d6875;
-    text-align: right;
+
+
+
+
+
+
+
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+        display: none;
+    }
+
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 }
 
-footer a {
-    color: #ffbe0b;
-}
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+    .topnav.responsive {
+        overflow: hidden;
+        position: sticky;
+        top: 0;
+    }
 
-footer a:hover {
-    color: #FB5607;
-}
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 
-ul {
-    list-style-type: none;
-}
-
-
-a {
-    text-decoration: none;
-    color: white;
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
