--- a/style.css
+++ b/style.css
@@ -57,7 +57,24 @@ body {
     padding: 0 2em;
 }
 
+#text-highlight {
+    color: #e63946;
+}
 
+.hero-introduction {
+    display: flex;
+    flex-direction: column;
+}
+
+.hero-introduction h2 {
+    font-size: 34px;
+    margin-bottom: 0;
+}
+
+.hero-introduction p {
+    font-size: 24px;
+    font-weight: 100;
+}
 .hero-logos {
     display: flex;
     flex-direction: row;
@@ -68,10 +85,58 @@ body {
     flex-wrap: wrap;
 }
 
-.portfolio-section {
+#portfolio-section {
     display: flex;
     flex-wrap: wrap;
-    background-color:teal;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#portfolio-section h2 {
+    font-size: 34px;
+    margin-bottom: 1em;
+}
+
+.case-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.case {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2em;
+    flex-wrap: wrap;
+    margin: 1em;
+}
+
+.case h3 {
+    font-weight: 400;
+    margin-bottom: .5em;
+    align-self: flex-start;
+}
+
+.case-image {
+    border-radius: 6%;
+    background-color: #001423;
+    width: 320px;
+    height: 220px;
+}
+
+.case-summary {
+    display: flex;
+    width: 320px;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.case-summary p {
+    font-weight: 200;
 }
 
 
